--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,3 +5,7 @@
 @import "utils/variables.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap');
+
+
+/* Base */
+@import "base/main.css";
