--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -13,7 +13,8 @@
     width: 198px;
     height: 264px;
     flex-shrink: 0;
-    justify-content: center;
+    margin: 88px;
+    
 }
 
 .header-intertitre{
