--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -20,3 +20,34 @@
 .header-intertitre{
     color: var(--blanc);
 }
+
+.dropdown {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: fixed; /* Change from absolute to fixed */
+    background-color: #f9f9f9;
+    width: 100%; /* Take full width */
+    height: 100%; /* Take full height */
+    top: 0; /* Position at the top */
+    left: 0; /* Position at the left */
+    box-shadow: none; /* Remove box shadow */
+    padding: 12px 16px;
+    z-index: 1;
+}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+.close {
+    position: absolute;
+    top: 24px;
+    right: 60px;
+}
+  
+ 
