création du fichier + import dans le style css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,3 +19,4 @@
 /* Components */
 @import "components/section1.css";
 @import "components/architecte-menu.css";
+@import "components/carrousel.css";
