création des classe et des pages

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,3 +20,4 @@
 @import "components/section1.css";
 @import "components/architecte-menu.css";
 @import "components/carrousel.css";
+@import "components/billeterie-accueil.css";
