modifications de la section contacte

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,3 +21,4 @@
 @import "components/architecte-menu.css";
 @import "components/carrousel.css";
 @import "components/billeterie-accueil.css";
+@import "components/contact.css";
