--- a/src/css/components/contact.css
+++ b/src/css/components/contact.css
@@ -32,3 +32,14 @@
     background: var(--black, #000);
     
 }
+
+input[type="text"], input[type="email"], textarea {
+    background: none;
+    border: none;
+    border-bottom: 1px solid var(--blanc); /* Change color as needed */
+    box-shadow: none;
+    outline: none;
+    display: block;
+    margin-bottom: 20px;
+    width: 100%;
+}
