class menu plus page menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,4 @@
 @import "components/carrousel.css";
 @import "components/billeterie-accueil.css";
 @import "components/contact.css";
+@import "components/menu.css";
