--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,3 +24,4 @@
 @import "components/billeterie-accueil.css";
 @import "components/contact.css";
 @import "components/menu.css";
+@import "components/infos.css";
