--- a/src/css/components/infos.css
+++ b/src/css/components/infos.css
@@ -13,7 +13,7 @@
   }
   li[role=tab] {
     display: inline-block;
-    padding: 6px;
+    padding: 3px;
     background-color: var(--blanc);
     border: 1px solid #ccc;
     border-radius: 30px;
@@ -21,9 +21,10 @@
     cursor: pointer;
     text-decoration: none;
     color: var(--marrons);
-    width: 77px;
+    width: 80px;
     height: 29px; 
-    text-align: center; 
+    text-align: center;
+    font-size: 20px; 
 
   }
 .infos__intertitre{
