--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,3 +25,4 @@
 @import "components/contact.css";
 @import "components/menu.css";
 @import "components/infos.css";
+@import "components/billetterie-page.css";
