class + création page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,3 +26,4 @@
 @import "components/menu.css";
 @import "components/infos.css";
 @import "components/billetterie-page.css";
+@import "components/Ban.css";
