création dela page batiments + déclarer dans style css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,3 +27,4 @@
 @import "components/infos.css";
 @import "components/billetterie-page.css";
 @import "components/Ban.css";
+@import "components/batiments.css";
