création de la page css galerie

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,3 +28,4 @@
 @import "components/billetterie-page.css";
 @import "components/Ban.css";
 @import "components/batiments.css";
+@import "components/galerie.css";
