pages oeuvres css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,3 +29,4 @@
 @import "components/Ban.css";
 @import "components/batiments.css";
 @import "components/galerie.css";
+@import "components/oeuvres.css";
