--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -35,7 +35,7 @@
   .dropdown-content {
     display: none;
     position: fixed; /* Change from absolute to fixed */
-    background-color: #f9f9f9;
+    background-color: var(--blanc);
     width: 100%; /* Take full width */
     height: 100%; /* Take full height */
     top: 0; /* Position at the top */
