--- a/src/css/components/billeterie-accueil.css
+++ b/src/css/components/billeterie-accueil.css
@@ -1,3 +1,9 @@
+.billetterie-acceuil{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .billetterie__titre{
     color: var(--marrons);
     margin-top: 10px;
@@ -9,20 +15,26 @@
     margin-bottom: 30px;    
 }
 .Btn-billetterie{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: var(--intertitre);
+    font-variant: small-caps;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    background-color: var(--marrons);
+    color: var(--blanc);
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
     width: 161px;
     height: 40px;
-    color: var(--Marrons, #B18544);
-    text-align: center;
-    font-family: Times New Roman;
-    font-size: var(--intertitre);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 110%; /* 30.8px */
-    font-variant: small-caps;
-    text-decoration-line: underline;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: center;
-    display: flex;
-    justify-content: center;
+    flex-shrink: 0;
+    text-decoration: underline;
+   
+    
 }
