--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -30,7 +30,7 @@ h3{
 }
 
 p{
-    font-family: Signika Negative ;
+    font-family: 'Signika Negative' ;
     font-size: var(--texte);
     text-align: left;
     font-weight: 300;
