--- a/src/css/components/oeuvres.css
+++ b/src/css/components/oeuvres.css
@@ -55,13 +55,15 @@
     width: 62px;
     height: 22px;
     flex-shrink: 0;
-    padding: 30px;
-    margin-bottom: 0px;
+    padding: 0px;
+    margin-bottom: 10px;
+    display: flex;
     
 }
 
 .Oeuvres__dates::before {
-    content: "- ";
+    content: "-";
+    font-size: 60px;
 }
 
 .Oeuvres__img{
@@ -84,10 +86,8 @@
     font-variant: small-caps;
     margin-top: 30px;
     margin-bottom: 0px;
+    padding: 30px;
 }
 
-.Oeuvres__nom_bis{
-    padding: 80px;
 
-}
 
