--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -21,13 +21,13 @@
     width: 100vw;
     height: 100vh;
     background: #fff;
-    display: grid;
-    place-content: center;
+    display: flex;
 
   }
   .header_menuBtn {
-    position: relative;
-    z-index: 10;
+    position: absolute;
+    top: 24px;
+    right: 24px;
   }
   .noscroll,
   .noscroll body {
@@ -38,8 +38,20 @@
     width: 46px;
     height: 55px;
     flex-shrink: 0;
+    top: 24px;
+    left: 24px;
+      
+}
+
+.menu-list{
+    list-style-type: none;
+    padding: 50px ;
     position: relative;
-    top: 10px;
-    left: 10px;  
+    top: 40px  
+
+}
+
+.menu-list li {
+    margin: 60px 0;
 }
 
