--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -22,7 +22,7 @@
     height: 100vh;
     background: #fff;
     display: flex;
-
+    z-index: 2;
   }
   .header_menuBtn {
     position: absolute;
