style css page 404

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,3 +30,4 @@
 @import "components/batiments.css";
 @import "components/galerie.css";
 @import "components/oeuvres.css";
+@import "components/page404.css";
