lien vers le site de shigeru Ban

--- a/src/css/components/billeterie-accueil.css
+++ b/src/css/components/billeterie-accueil.css
@@ -18,6 +18,7 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: var(--intertitre);
     font-variant: small-caps;
+    text-align: center;
     margin-top: 20px;
     margin-bottom: 30px;
     margin-left: 30px;
