--- a/src/css/components/batiments.css
+++ b/src/css/components/batiments.css
@@ -3,6 +3,12 @@
     padding: 44px;
     margin-top: 5px;
     margin-bottom: 5px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: var(--titre-2);
+    text-align: center;
+    font-weight: 400;
+    line-height: 110%; /* 44px */
+    font-variant: small-caps;
 }
 
 .Batiment__img{
