--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -50,3 +50,16 @@ strong{
     margin-top: 1px;
     margin-bottom: 0px;
 }
+
+.HOME__Titre{
+    color: var(--Marrons, #B18544);
+    padding: 2px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: var(--intertitre);
+    text-align: center;
+    font-weight: 400;
+    line-height: 110%; /* 44px */
+    font-variant: small-caps;
+}
