changement de couleurs

--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -1,6 +1,6 @@
 :root{
 /* Color styles */
---marrons: rgba(177, 133, 68, 1);
+--marrons: rgb(212, 169, 103);
 --blanc: rgba(255, 255, 255, 1);
 --noir: rgba(0, 0, 0, 1);
 
